--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hars1014.github.io/portfolio/",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
